# Calculadora

./: .gitignore  HYPRLAND.md  LICENSE  LOGIC.md  README.md  hyprland-rapidcalc.conf  install.sh  package-lock.json  package.json  uninstall.sh  vitest.config.ts
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/calculator/: commands.rs  converter.rs  history.rs  math.rs  mod.rs  programmer.rs
src/lib/api/: tauri.ts
src/lib/components/: Button.svelte  ConverterView.svelte  DateView.svelte  Icon.svelte  Keypad.svelte  ProgrammerView.svelte  SelectField.svelte  Sidebar.svelte  SyntaxExpression.svelte
src/lib/hooks/: useThemeListener.ts
src/lib/logic/: converter.svelte.ts  engine.svelte.ts  keyboard.svelte.ts  programmer.svelte.ts  ui.svelte.ts
src/lib/schemas/: validation.ts
src/lib/services/: CalculatorLogic.ts
src/lib/stores/: converter.svelte.ts  engine.svelte.ts  index.ts  keyboard.svelte.ts  programmer.svelte.ts  ui.svelte.ts
src/lib/types/: calculator.ts
src/lib/utils/: constants.ts
src/routes/: +page.svelte
src/tests/: setup.ts
src/tests/logic/: calculator.test.ts
